# Universal_hal

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  library.json  mkdocs.yml  pio_build_configure.py
.github/workflows/: mkdocs.yml  run_tests.yml
docs/: code_style.md  contributing.md  index.md
docs/API/: i2c_api.md  i2c_compatibility.md  i2c_host_api.md
docs/API/DMA/: dma_api.md  dma_compatibility.md
docs/API/DMA/platform/atmelsam/: About.md  Critical_notes.md  Usage.md
docs/API/GPIO/: gpio_api.md  gpio_compatibility.md
docs/API/GPIO/platform/atmelsam/: about.md
docs/API/I2C_host/: i2c_compatibility.md  i2c_host_api.md
docs/API/I2C_host/platform/atmelsam/: Usage.md
docs/API/I2C_slave/: i2c_compatibility.md  i2c_slave_api.md
docs/API/I2C_slave/platform/atmelsam/: About.md  Usage.md
docs/API/SPI_host/: spi_host_api.md  spi_host_compatibility.md
docs/API/SPI_host/platform/atmelsam/: Critical_notes.md  Usage.md
docs/API/SPI_slave/: spi_slave_api.md  spi_slave_compatibility.md
docs/API/SPI_slave/platform/atmelsam/: About.md  Usage.md
docs/API/UART/: uart_api.md
docs/API/UART/platform/atmelsam/: About.md  Usage.md
docs/API/USB/: usb_api.md  usb_compatibility.md
docs/API/USB/platform/atmelsam/: Critical_notes.md  Usage.md
docs/API/platform/: Usage.md  about.md
docs/assets/: .$SAMD_I2C_ISR.drawio.bkp  SAMD_I2C_ISR.drawio
docs/automation/API section of module/: main.py  template.md  template_function_section.txt
examples/samd21/gpio_blinky/: CMakeLists.txt
examples/samd21/gpio_blinky/src/: main.c
examples/samd21/uart_echo/: .gitignore  CMakeLists.txt
examples/samd21/uart_echo/src/: clock_init.h  main.c
examples/samd21/usb_serial/: CMakeLists.txt
examples/samd21/usb_serial/src/: main.c  tusb_config.h  usb_descriptors.c
hal/: bit_manipulation.h  error_handling.h  gpio_error_handling.h  hal_dma.h  hal_gpio.h  hal_i2c.h  hal_i2c_host.h  hal_i2c_slave.h  hal_spi.h  hal_spi_host.h  hal_spi_slave.h  hal_uart.h  universal_hal.h
hal/platform/atmelsam/: atmel_default_irq_handlers.c  atmel_default_irq_handlers.h  bit_manipulation.h  default_irq_handlers.c  default_irq_handlers.h  gpio_platform_specific.h  gpio_samd.c  i2c.c  i2c_platform_specific.h  i2c_slave.c  peripheral_clocking.h  spi.c  spi_host.c  spi_platform_specific.h  spi_slave.c
hal/platform/atmelsam/clock_system/: peripheral_clocking.h
hal/platform/atmelsam/dma/: dma.c  dma_irq_handler.h  dma_platform_specific.h
hal/platform/atmelsam/gpio/: gpio_irq_handler.h  gpio_platform_specific.h  gpio_samd.c  pins.h
hal/platform/atmelsam/i2c_common/: i2c_platform_specific.h  i2c_types.h
hal/platform/atmelsam/i2c_host/: i2c.c  i2c_host_irq_handler.h
hal/platform/atmelsam/i2c_slave/: i2c_slave.c  i2c_slave_irq_handler.h
hal/platform/atmelsam/irq/: default_irq_handlers.c  irq_bindings.c  irq_bindings.h  sercom_stuff.h
hal/platform/atmelsam/spi_common/: spi_platform_specific.h
hal/platform/atmelsam/spi_host/: spi_host.c  spi_host_irq_handler.h
hal/platform/atmelsam/spi_slave/: spi_slave.c  spi_slave_irq_handler.h
hal/platform/atmelsam/uart/: uart.c  uart_platform_specific.h
hal/platform/raspberrypi/: gpio_platform_specific.h  gpio_raspberrypi.c  hal_spi_platform_specific.h  spi.c
hal_gpio/: gpio_error_handling.h  hal_gpio.h
hal_gpio/platform/atmelsam/: gpio_platform_specific.h  gpio_samd.c
hal_gpio/platform/raspberrypi/: gpio_platform_specific.h  gpio_raspberrypi.c
hal_i2c/: hal_i2c.h
hal_i2c/platform/atmelsam/: i2c.c  i2c_platform_specific.h
middleware/usb/: hal_usb_serial.h
middleware/usb/platform/atmelsam/: usb_platform_specific.h  usb_serial_platform_specific.h  usb_serial_samd.c
platform_dep/atmelsam/: atmel_default_irq_handlers.c  atmel_default_irq_handlers.h  atmel_irq.h  sercom_dep.h
test/atmelsam/: CMakeLists.txt
test/atmelsam/gpio/: gpio.c  gpio.cpp
test/atmelsam/mocks/: eic_mock.h  gclk_mock .h  gclk_mock.h  nvic_mock.h  pm_mock.h  port_mock.h  sam.h  sercom_mock.h
test/atmelsam/uart/: uart.cpp
